@@ -8,7 +8,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: parse.test,v 1.24.2.1 2006/10/09 19:31:07 msofer Exp $
+# RCS: @(#) $Id: parse.test,v 1.24.2.2 2006/10/09 19:41:34 msofer Exp $
 
 if {[catch {package require tcltest 2.0.2}]} {
     puts stderr "Skipping tests in [info script]. tcltest 2.0.2 required."
@@ -352,12 +352,12 @@ test parse-8.8 {Tcl_EvalObjv procedure, async handlers} -constraints {
 	return "new result"
     }
     set handler1 [testasync create async1]
-    set aresult xxx
-    set acode yyy
+    set ::aresult xxx
+    set ::acode yyy
 } -cleanup {
     testasync delete
 } -body {
-    list [testevalobjv 0 testasync mark $handler1 original 0] $acode $aresult
+    list [testevalobjv 0 testasync mark $handler1 original 0] $::acode $::aresult
 } -result {{new result} 0 original}
 test parse-8.9 {Tcl_EvalObjv procedure, exceptional return} testevalobjv {
     list [catch {testevalobjv 0 error message} msg] $msg
